--- a/src/components/logan/logan.module.css
+++ b/src/components/logan/logan.module.css
@@ -21,7 +21,7 @@ border-radius: 6px;
   font-size: 16px;
 }
 .alexsec {
-  padding: 50px 0px;
+ padding-top: 150px;
 }
 .alexbox h2 {
   line-height: 1em;
