--- a/src/components/commercial/commercial.module.css
+++ b/src/components/commercial/commercial.module.css
@@ -98,7 +98,7 @@ max-width: 250px;
     font-size: 22px; 
   }
   .commercialsec{
-    padding: 40px 0px;
+   padding-top: 150px;
     background-position: left 76% top 60%;
   background-image: linear-gradient(64deg,#ffffff 31%,rgba(255,255,255,0.55) 80%),url('/images/Commercialbg.jpg') !important;
   }
