--- a/src/components/local/local.module.css
+++ b/src/components/local/local.module.css
@@ -85,7 +85,7 @@ max-width: 250px;
     font-size: 30px; 
   }
   .commercialsec{
-    padding: 40px 0px;
+   padding-top: 150px;
     background-position: left 20% top 20%;
 background-image: linear-gradient(64deg,#ffffff 46%,rgba(255,255,255,0.55) 72%),url('/images/localbg.jpg') !important;
   }
