--- a/src/components/home/prac/practise.module.css
+++ b/src/components/home/prac/practise.module.css
@@ -111,10 +111,11 @@
   .nullimg {
     background-image: url('/images/head-boy-pic.jpg');
     background-position: center;
-    background-size: cover;
+    background-size: contain;
     height: 300px;
     margin-top: 40px;
-    background-position: fixed;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
   }
 
   .backimg {
