--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,13 +35,29 @@ h2,
 h3,
 h4 {
   font-family: var(--calluna) !important;
+  color: #081b33;
 }
 ul li {
   font-family: 'Lato', sans-serif;
 }
 
-* {
-  box-sizing: border-box;
+h1 {
+  font-size: 50px;
+}
+
+h2 {
+  font-size: 30px;
+  font-weight: 600;
+}
+
+h3 {
+  font-size: 24px;
+}
+h4 {
+  font-size: 22px;
+}
+p {
+  font-size: 18px;
 }
 img {
   max-width: 100%;
