--- a/src/components/home/ourPurpose/purpose.module.css
+++ b/src/components/home/ourPurpose/purpose.module.css
@@ -1,191 +1,180 @@
-.secfull{
-   margin-top: 100px;
-    grid-template-columns: repeat(2,1fr);
-    display: grid;
+.secfull {
+  margin-top: 100px;
+  grid-template-columns: repeat(2, 1fr);
+  display: grid;
 }
-.box3 h1{
-    padding-left: 15px;
-    font-size: 28px;
-    padding-top: 20px;
-    font-weight: lighter;
-}   
-.box3{
-    display: flex;
-   align-items: center;
+.box3 h1 {
+  padding-left: 15px;
+  font-size: 28px;
+  padding-top: 20px;
+  font-weight: lighter;
+}
+.box3 {
+  display: flex;
+  align-items: center;
 }
 
-.box2{
-    display: flex;
-    align-items: center;
+.box2 {
+  display: flex;
+  align-items: center;
 }
-.main{
- background-color: #F5F5F5;
- /* margin-top: 30px; */
+.main {
+  background-color: #f5f5f5;
+  /* margin-top: 30px; */
   margin-bottom: 50px;
-
 }
-.main2{
- background-color: #F5F5F5;
- margin-left: 40px;
- margin-top: 30px;
- align-items: center;
- /* height: 450px; */
-}
-
-.box3 img{
-   margin-top: 10px;
-    width: 12%;
-    padding: 15px 0px 15px 15px;
-    background-color: #f2f2f2;
-    border-radius: 90px 0px 0px 90px;
-    margin-left: -20px;
+.main2 {
+  background-color: #f5f5f5;
+  margin-left: 40px;
+  margin-top: 30px;
+  align-items: center;
+  /* height: 450px; */
 }
 
-.main .p2{
-    max-width: 350px;
-    line-height: 1.4;
-    padding: 15px 34px;
-}
-.main .p5{
-    font-weight: bold;
-    max-width: 350px;
-    line-height: 1.4;
-    padding: 15px 34px;
-    color: #081B33;
-    padding-bottom: 50px;
+.box3 img {
+  margin-top: 10px;
+  width: 12%;
+  padding: 15px 0px 15px 15px;
+  background-color: #f2f2f2;
+  border-radius: 90px 0px 0px 90px;
+  margin-left: -20px;
 }
 
-.main .p3{
-    max-width: 390px;
-    padding: 4px 34px;
-    line-height: 1.4;
+.main .p2 {
+  max-width: 350px;
+  line-height: 1.4;
+  padding: 15px 34px;
 }
-.main2 .p4{
-    max-width: 350px;
-    padding: 4px 30px;
-    line-height: 1.5;
-    padding-bottom: 20px;
-    margin-bottom: 0px;
-}
-
-.main span{
-    padding: 15px 20px;
-    font-weight: normal;
-    font-style: italic;
-    color: #E54A35!important;
-    font-size: 20px;
+.main .p5 {
+  font-weight: bold;
+  max-width: 350px;
+  line-height: 1.4;
+  padding: 15px 34px;
+  color: #081b33;
+  padding-bottom: 50px;
 }
 
-.main2 h4{
-    font-weight: normal;
-    padding: 20px 20px;
-    font-style: italic;
-    color: #E54A35!important;
-    font-size: 20px;
+.main .p3 {
+  max-width: 390px;
+  padding: 4px 34px;
+  line-height: 1.4;
+}
+.main2 .p4 {
+  max-width: 350px;
+  padding: 4px 30px;
+  line-height: 1.5;
+  padding-bottom: 20px;
+  margin-bottom: 0px;
 }
 
-.main .p1{
-    padding: 8px 20px;
-    padding-bottom: 30px;
-
-}
-.btn2{
-    padding: 30px 40px;
-}
-.btn2 :nth-child(1){
-    width: 200px;
-    height: 50px;
-    font-weight: bolder;
-    background-color: #081B33;
-    color: white;
-    text-transform: capitalize;
-    font-family: sans-serif;
-    font-size: 17px;
-    cursor: pointer;
-    border: none;
-}
-.btn2 :nth-child(2){
-    margin-top: 20px;
-    width: 150px;
-    height: 50px;
-    font-weight: bolder;
-    background-color: #081B33;
-    color: white;
-    text-transform: capitalize;
-    font-family: sans-serif;
-    font-size: 17px;
-    cursor: pointer;
-    border: none;
-}
-.btn2 :nth-child(1):hover{
-background-color: #E54A35;
-}
-.btn2 :nth-child(2):hover{
-background-color: #E54A35;
+.main span {
+  padding: 15px 20px;
+  font-weight: normal;
+  font-style: italic;
+  color: #e54a35 !important;
+  font-size: 20px;
 }
 
-.sec2{
-    padding: 0px 60px;
+.main2 h4 {
+  font-weight: normal;
+  padding: 20px 20px;
+  font-style: italic;
+  color: #e54a35 !important;
+  font-size: 20px;
 }
 
-.innerImg{
-    align-items: center;
-    display: flex;
+.main .p1 {
+  padding: 8px 20px;
+  padding-bottom: 30px;
 }
-.innerImg h1{
-    font-size: 28px;
-    /* font-weight: 400; */
+.btn2 {
+  padding: 30px 40px;
 }
-.innerImg img{
-    width: 15%;
+.btn2 :nth-child(1) {
+  width: 200px;
+  height: 50px;
+  font-weight: bolder;
+  background-color: #081b33;
+  color: white;
+  text-transform: capitalize;
+  font-family: sans-serif;
+  font-size: 17px;
+  cursor: pointer;
+  border: none;
 }
-.onlyP{
-    padding-left: 10px;
+.btn2 :nth-child(2) {
+  margin-top: 20px;
+  width: 150px;
+  height: 50px;
+  font-weight: bolder;
+  background-color: #081b33;
+  color: white;
+  text-transform: capitalize;
+  font-family: sans-serif;
+  font-size: 17px;
+  cursor: pointer;
+  border: none;
 }
-.onlyP p{
-    padding-top: 25px;
-    line-height: 1.7;
-    max-width: 500px;
+.btn2 :nth-child(1):hover {
+  background-color: #e54a35;
 }
-.onlyP h4{
-    font-weight: bolder;
-    color: #E54A35;
-    padding-top: 15px;
-    font-size: 20px;
+.btn2 :nth-child(2):hover {
+  background-color: #e54a35;
 }
-.onlyP span{
-    color: #081B33;
-    font-weight: bolder;
+
+.sec2 {
+  padding: 0px 60px;
 }
-@media all and (max-width: 768px){
-    .secfull{
+
+.innerImg {
+  align-items: center;
+  display: flex;
+}
+
+.onlyP {
+  padding-left: 10px;
+}
+.onlyP p {
+  padding-top: 25px;
+  line-height: 1.7;
+  max-width: 500px;
+}
+.onlyP h4 {
+  font-weight: bolder;
+  color: #e54a35;
+  padding-top: 15px;
+  font-size: 20px;
+}
+.onlyP span {
+  color: #081b33;
+  font-weight: bolder;
+}
+@media all and (max-width: 768px) {
+  .secfull {
     padding: 60px 15px;
-    grid-template-columns: repeat(1,1fr);
+    grid-template-columns: repeat(1, 1fr);
     display: grid;
     margin-top: -70px;
-}
-.box2 h1{
+  }
+  .box2 h1 {
     max-width: 260px;
-}
-.main2{
+  }
+  .main2 {
     margin-left: 0px;
     margin-top: 30px;
-}
-.main{
+  }
+  .main {
     margin-top: 0px;
     margin-bottom: 30px;
-}
-.box2{
+  }
+  .box2 {
     display: block;
     align-items: center;
-}
-.btn2{
+  }
+  .btn2 {
     padding: 30px 0px;
-}
-.sec2{
+  }
+  .sec2 {
     padding: 30px 0px;
-}
-.innerImg img{
-    width: 25%;
-}
+  }
 }
