--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,14 +14,33 @@
   }
 
   .primary-btn-outline {
-    @apply py-3 px-4 pl-2 inline-flex justify-center items-center gap-2  border-2  font-semibold bg-transparent   focus:outline-none   transition-all uppercase w-full max-w-[220px];
+    @apply py-3 px-4 pl-2 inline-flex text-base justify-center items-center gap-2  border-[3px]  font-semibold bg-transparent   focus:outline-none   transition-all uppercase w-full max-w-[245px];
   }
   .primary-btn {
-    @apply py-3 px-4 pl-2 inline-flex justify-center items-center gap-2  border-transparent font-semibold   focus:outline-none   transition-all uppercase w-full max-w-[220px];
+    @apply py-3 px-4 pl-2 inline-flex text-base justify-center items-center gap-2  border-transparent font-semibold   focus:outline-none   transition-all uppercase w-full max-w-[245px];
   }
   .primary-btn-bg {
-    @apply py-3 px-4 pl-2 inline-flex justify-center items-center gap-2 bg-secondry !text-white hover:bg-primary hover:text-white  border-transparent font-semibold   focus:outline-none   transition-all uppercase w-full max-w-[220px] shadow-lg;
+    @apply py-3 px-4 pl-2 inline-flex text-base justify-center items-center gap-2 bg-secondry !text-white hover:bg-primary hover:text-white  border-transparent font-semibold   focus:outline-none   transition-all uppercase w-full max-w-[245px] shadow-lg;
   }
+  .four-box-hover {
+    content: '';
+    background: radial-gradient(
+      circle at center,
+      rgba(8, 27, 51, 0.84) 10%,
+      rgba(229, 74, 53, 0.65) 100%
+    );
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    opacity: 1;
+  }
+}
+
+html {
+  font-size: 120%;
 }
 
 .container {
@@ -60,7 +79,7 @@ h4 {
   font-size: 22px;
 }
 p {
-  font-size: 18px;
+  font-size: 1.2rem;
 }
 img {
   max-width: 100%;
@@ -82,6 +101,35 @@ img {
   width: 100%;
 }
 
+.mb-divider-top {
+  background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwJSIgaGVpZ2h0PSI1MHB4IiB2aWV3Qm94PSIwIDAgMTI4MCAxNDAiIHByZXNlcnZlQXNwZWN0UmF0aW89Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PGcgZmlsbD0iI2ZmZmZmZiI+PHBhdGggZD0iTTY0MCAxNDBMMTI4MCAwSDB6IiBmaWxsLW9wYWNpdHk9Ii41Ii8+PHBhdGggZD0iTTY0MCA5OGw2NDAtOThIMHoiLz48L2c+PC9zdmc+);
+  background-size: 100% 50px;
+  top: 50px;
+  height: 50px;
+  z-index: 1;
+  transform: scale(1, 1);
+  position: relative;
+}
+
+.mb-divider {
+  background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwJSIgaGVpZ2h0PSI1MHB4IiB2aWV3Qm94PSIwIDAgMTI4MCAxNDAiIHByZXNlcnZlQXNwZWN0UmF0aW89Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PGcgZmlsbD0iI2ZmZmZmZiI+PHBhdGggZD0iTTY0MCAxNDBMMTI4MCAwSDB6IiBmaWxsLW9wYWNpdHk9Ii41Ii8+PHBhdGggZD0iTTY0MCA5OGw2NDAtOThIMHoiLz48L2c+PC9zdmc+);
+  background-size: 100% 50px;
+  bottom: 0;
+  height: 50px;
+  z-index: 1;
+  transform: scale(1, -1);
+  top: -50px;
+  position: relative;
+}
+
+.listing li:before {
+  content: '\2022';
+  color: #e54a35;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
 @media all and (max-width: 980px) {
   .bt_divider {
     display: none;
