--- a/src/components/upperFoot/foot.module.css
+++ b/src/components/upperFoot/foot.module.css
@@ -1,5 +1,5 @@
 .backPic {
-  /* background-image: url(./images/last-back-img.jpg); */
+  /* background-image: url(/images/last-back-img.jpg); */
   background-image: linear-gradient(
       180deg,
       rgba(8, 27, 51, 0.76) 0%,
@@ -26,11 +26,11 @@
   display: grid;
   padding-top: 140px;
   /* padding: 140px 130px; */
-  padding-bottom:120px;
+  padding-bottom: 120px;
 }
 .Hgrod h1 {
   color: white;
-  font-family: "Calluna", sans-serif;
+  font-family: 'Calluna', sans-serif;
   font-size: 45px;
   max-width: 550px;
 }
